tests/errors/specific_type_intrinsic.f90
program main
    print*, dabs(1)
end program